@@ -6,3 +6,6 @@ Disallow:
 
 # And sitemap directive that forgot "sitemap:"
 http://domain.com/dir/my-sitemap.xml
+
+# And a mixed case URL which we want to preserve as such
+sitemap: http://domain.com/dir/MixedCased-sitemap.xml
