@@ -5,6 +5,7 @@ TRUNK
 - Issue 16: remove ant scripts and configuration (lewismc)
 - Issue 27: [SiteMap] Unnecessary String concatenations when logging + in SiteMapURL.toString() (jnioche)
 - Issue 26: [SiteMap] Set correct default priority for URL in a sitemap file (jnioche)
+- Issue 25: [Robots] Robots parser should not lowercase sitemap URLs (jnioche)
 
 Release 0.2
 - Move to pure Maven for CC build lifecycle (lewismc)
